--- a/tienda.html
+++ b/tienda.html
@@ -80,8 +80,7 @@
               </div>
           </div>
         </section>
-        <section id="renderProds">
-        </section>
+        <section id="renderProds"></section>
 <!--         <section class="buyApi">
           <h3 class="titleBuy">API</h3>
           <div class="fotoDeApi"></div>
