--- a/tienda.html
+++ b/tienda.html
@@ -60,11 +60,11 @@
               <form id="buscador">
                 <div class="row">
                     <div class="marcaTodo">
-                        <label for="marca">Origen</label>
-                        <select class="u-full-width" id="marca">
-                            <option value="">Seleccione</option>
-                            <option value="Audi">USA</option> 
-                            <option value="BMW">UK</option>
+                        <label origenEscrito="origen">Origen</label>
+                        <select class="selectContainerOk" id="selectContainer">
+                            <option class="Seleccion" value="">Seleccione</option>
+                            <option class="usa" value="USA">USA</option> 
+                            <option class="uk" value="uk">UK</option>
                         </select>
                     </div>
                 </div>
