--- a/tienda.html
+++ b/tienda.html
@@ -62,9 +62,9 @@
                     <div class="marcaTodo">
                         <label origenEscrito="origen">Origen</label>
                         <select class="selectContainerOk" id="selectContainer">
-                            <option class="Seleccion" value="">Seleccione</option>
+                            <option class="Seleccion" value="">Todos</option>
                             <option class="usa" value="USA">USA</option> 
-                            <option class="uk" value="uk">UK</option>
+                            <option class="uk" value="UK">UK</option>
                         </select>
                     </div>
                 </div>
