--- a/tienda.html
+++ b/tienda.html
@@ -52,7 +52,7 @@
     <main class="articles">
       <h1 class="titleParticularCommerce">TIENDA </h1>
       <div class="checkoutWay">
-        <h2 class="subtitleResp">Con todo lo aprendido ahora elígelos por país de Origen</h2>
+        <h2 class="subtitleResp">Con todo lo aprendido ahora elígelos por país de Origen:</h2>
       </div><!-- EMPIEZA CARDS -->
       <article class="carritoTodo">
         <section class="buyModifiers">
