--- a/tienda.html
+++ b/tienda.html
@@ -52,7 +52,7 @@
     <main class="articles">
       <h1 class="titleParticularCommerce">TIENDA </h1>
       <div class="checkoutWay">
-        <h2 class="subtitleResp">Con todo lo aprendido ahora elígelos por país de Origen:</h2>
+        <h2 class="subtitleResp">Con todo lo aprendido, elígelos por país de Origen:</h2>
       </div><!-- EMPIEZA CARDS -->
       <article class="carritoTodo">
         <section class="buyModifiers">
@@ -62,7 +62,7 @@
                     <div class="marcaTodo">
                         <label origenEscrito="origen">Origen</label>
                         <select class="selectContainerOk" id="selectContainer">
-                            <option class="Seleccion" value="">Elija</option>
+                            <option class="Seleccion" id="elija"value="">Elija</option>
                             <option class="usa" value="USA">USA</option> 
                             <option class="uk" value="UK">UK</option>
                         </select>
