--- a/contacto.html
+++ b/contacto.html
@@ -61,10 +61,10 @@
         </div>
       </article>
       <article class="misRedes">
-        <a class="logosOk logWhats" href="http://www.instagram.com/jonathan.sanso" alt= "WhatApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
-        <a class="logosOk logLnk" href="https://www.linkedin.com/in/jonathan-sans%C3%B3-4407aa15a" alt= "linkedIn"  target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a class="logosOk logWhats" href="https://wa.me/5491130257638"" alt= "WhatApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a class="logosOk logLnk" href="https://www.linkedin.com/in/jonathan-sanso-fullstack/" alt= "linkedIn"  target="_blank"><i class="fab fa-linkedin"></i></a>
         <a class="logosOk logXtra" href="https://open.spotify.com/playlist/61gDxDScsKGSxY4wobXCya?si=748d0fa71d404b62" alt= "Spotify"  target="_blank"><i class="fab fa-spotify"></i></a>
-        <a class="logosOk logIg" href="http://www.instagram.com/jonathan.sanso" alt= "Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a class="logosOk logIg" href="http://www.instagram.com/jon.sanso" alt= "Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
         <a class="logosOk logFb" href="http://www.facebook.com/jonathan.sanso" alt= "facebook"  target="_blank"><i class="fab fa-facebook-square"></i></a>
       </article>
       <article class="formContainerMax">
